# stroop_pygame

./: pyproject.toml  stroop.py
