[tool.poetry]
name = "stroop-pygame"
version = "0.1.0"
description = ""
authors = ["hd <hillier_dani@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
